--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Zadania do wykonania</title>
+    <title>Zadania wykonane</title>
     <style>
-        .site{
-            margin: 15px;
+        h5{
+            color: darkblue;
         }
+
     </style>
     <div th:replace="myfragments::myHeader"></div>
 </head>
-<body class="site">
-<h2>Wybierz opcję:</h2>
-<a href="/add">Dodaj nowe zadanie</a><br/>
-<a href="/todo">Wyświetl listę zadań do wykonania</a><br/>
-<a href="/archives">Wyświetl listę zadań archiwalnych</a><br/>
+<body>
+
+<div class="form-row" style="margin: 30px" th:each="task: ${doneTasksList}">
+    <div class="info ml-2">
+        <h5 th:text="'Zadanie: ' + ${task.name}"></h5>
+        <p th:text="'Kategoria zadania: ' + ${task.taskCategory.getDisplayName()}"></p>
+        <p th:text="'Termin końcowy zadania: ' + ${task.deadline}"></p>
+
+
+    </div>
+</div>
+
 </body>
 </html>
